part2/2.03/kube/manifests/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: exercise
  labels:
    name: exercise
