part2/2.03/kube/manifests/log-output-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: exercise
  name: log-output
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      containers:
        - name: log-output
          image: ronituohino/log-output:2.01.5
