part2/2.03/kube/manifests/ping-pong-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: exercise
  name: ping-pong
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ping-pong
  template:
    metadata:
      labels:
        app: ping-pong
    spec:
      containers:
        - name: ping-pong
          image: ronituohino/ping-pong:2.01.2
