part2/2.03/kube/manifests/ping-pong-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: exercise
  name: ping-pong-svc
spec:
  type: ClusterIP
  selector:
    app: ping-pong
  ports:
    - port: 2346
      protocol: TCP
      targetPort: 3001
